src/components/Navigation/Navigation.module.scss
@import '../../style/variables';

.container {
   font-size: clamp(.8rem, 1vw, 1rem);
   height: 30em;
   width: 100%;
   position: absolute;
   bottom: 0;
   overflow: auto;

   .links {
      display: flex;
      justify-content: center;
      gap: $gap;
      margin-top: 2em;
      transform: translateY(50%) scale(0.85);
      transition: transform 500ms $cubic-bezier;
      overflow: auto;

      &.active {
         transform: translateY(0%) scale(1);
      }

      .link {
         user-select: none;
         cursor: pointer;

         .linkLabel {
            color: #fff;
            font-size: 1.25em;
            margin: 0;
            margin-bottom: 0.75em;
            text-transform: uppercase;
            position: relative;
            transition: all .2s ease-in-out;

            &.linkActive {
               padding-left: 1.2em;

               &::before {
                  opacity: 1;
                  transform: translate(0, -35%);
                  background-color: $secondary-color;
               }
            }

            &::before {
               content: "";
               position: absolute;
               left: 0;
               top: 50%;
               transform: translate(.75em, -35%);
               width: .7em;
               aspect-ratio: 1;
               opacity: 0;
               border-radius: 50%;
               background-color: $primary-color;
               transition: all .2s ease-in-out;
            }
         }

         .linkImage {
            width: min(25vw, 25em);
            aspect-ratio: 1.8 / 1;
            border-radius: 0.5em;
            overflow: hidden;
            transition: all .2s ease-in-out;

            &.home {
               background: no-repeat center/105% url('../../img/navigation/home.png');
            }

            &.events {
               background: no-repeat center/105% url('../../img/navigation/events.png');
            }

            &.about {
               background: no-repeat center/105% url('../../img/navigation/about.png');
            }

            &.contact {
               background: no-repeat center/105% url('../../img/navigation/contact.png');
            }
         }

         &:hover {
            .linkLabel {
               padding-left: 1.2em;

               &::before {
                  opacity: 1;
                  transform: translate(0, -35%);
               }
            }

            .linkImage {
               background-size: 101%;
            }
         }
      }
   }
}

@media screen and (max-width: 110rem) {
   .container {
      .links {
         justify-content: start;
         padding-inline: 4em;
      }
   }
}

@media screen and (max-width: 64rem) {
   .container {
      height: 30rem;

      .links {
         justify-content: center;
         padding-inline: 0;

         .link {
            .linkImage {
               width: 12em;
               aspect-ratio: 1.5 / 2.5;

               &.home {
                  background: no-repeat center/cover url('../../img/navigation/home-mobile.png');
               }

               &.events {
                  background: no-repeat center/cover url('../../img/navigation/events-mobile.png');
               }

               &.about {
                  background: no-repeat center/cover url('../../img/navigation/about-mobile.png');
               }

               &.contact {
                  background: no-repeat center/cover url('../../img/navigation/contact-mobile.png');
               }
            }
         }
      }
   }
}

@media screen and (max-width: 48rem) {
   .container {
      .links {
         justify-content: start;
         padding-inline: clamp(2em, 7vw, 4em);
      }
   }
}

